--- a/client/package.json
+++ b/client/package.json
@@ -8,5 +8,39 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^17.0.2",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "immer": "^9.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.4.0",
+    "styled-components": "^5.3.3",
+    "node-sass": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
+    "@types/jest": "^27.0.3",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0",
+    "css-loader": "^6.5.1",
+    "babel-loader": "^8.2.3",
+    "sass-loader": "^12.4.0",
+    "ts-loader": "^9.2.6",
+    "mini-css-extract-plugin": "^2.4.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.5.4",
+    "jest": "^27.4.5"
+  }
 }
