--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
-    "start": "webpack serve",
+    "dev": "webpack serve",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@types/node": "^17.0.2",
     "@types/react": "^17.0.37",
