--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^11.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
