--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": true,
   "endOfLine": "auto",
   "arrowParens": "avoid",
   "bracketSpacing": true
