:wrench: 절대경로 import 가능하도록 babel 설정

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es5",
     "jsx": "react-jsx",
     "moduleResolution": "Node",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
