--- a/client/.babelrc
+++ b/client/.babelrc
@@ -6,6 +6,15 @@
   ],
   "plugins": [
     "@babel/proposal-class-properties",
-    "@babel/proposal-object-rest-spread"
+    "@babel/proposal-object-rest-spread",
+    [
+      "module-resolver",
+      {
+        "root": ["."],
+        "alias": {
+          "src": "./src"
+        }
+      }
+    ]
   ]
 }
