--- a/client/package.json
+++ b/client/package.json
@@ -34,9 +34,11 @@
     "@babel/core": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@babel/runtime": "^7.16.7",
     "@types/jest": "^27.0.3",
     "@types/styled-components": "^5.1.20",
     "babel-loader": "^8.2.3",
