:wrench: jest 관련 설정파일 생성

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,9 @@
     "jsx": "react-jsx",
     "moduleResolution": "Node",
     "baseUrl": ".",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
